<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/newJugador"
        android:id="@+id/tvJugador"
        android:textColor="#ffff5d69"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintNombre"
        android:id="@+id/tvJNombre"
        android:layout_margin="2dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintTelefono"
        android:id="@+id/tvJTlf"
        android:layout_margin="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintFnac"
        android:id="@+id/tvJFnac"
        android:layout_margin="2dp" />

</LinearLayout>