<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/newPartido"
        android:id="@+id/tvPartido"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newJugador"
        android:id="@+id/tvPJugID"
        android:layout_margin="2dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintValoracion"
        android:id="@+id/tvPVal"
        android:layout_margin="2dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintContrincante"
        android:id="@+id/tvPCont"
        android:layout_margin="2dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>